<resources>
    <string name="app_name">Straat.Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="splash_loading">Loading...</string>
    <string name="login">Login</string>
    <string name="login_new_user">New User? Click here</string>
    <string name="login_sign_in">Existing user? Log in:</string>
    <string name="login_enter_email_add">Enter your email</string>
    <string name="login_enter_password">Enter your password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="registration_username_info">Please enter your username here. All other users can
        only see your username; your phone number, your name or other data is not shown.\n However, when you are member
        of a team, your team members will be able to see your real name, but not other data like your phonenumber. Your
        team coordinator can see all your data; with this (s)he can check if the right person is in the team.\n When
        needed the police and other officials will be given access to your data.
    </string>
    <string name="registration_username_info_title">Username Info</string>
    <string name="registration_title">Registration</string>
    <string name="registration_message">You’ve asked access as a non volunteer to create a new
        team. straat.info will contact you. If you haven’t heard anything within 5 days, please mail us at
        info@straat.info
    </string>
    <string name="registration_success_desc">Registration Success</string>
    <string name="registration_fail_desc">Registration Failed</string>
    <string name="registration_nav_data">Data</string>
    <string name="registration_nav_reporter">Reporter</string>
    <string name="registration_nav_team">Team</string>
    <string name="registration_terms_and_cond_title">Terms and Condition</string>
    <string name="registration_terms_and_cond_desc">In case of urgency, first call 122\n

        The app straat.info is meant to support neighbourhood watch. The use of this app for any other means is not
        permitted.\n

        The app can in no case be seen as a legal replacement for communication with professionals like police,
        hospitals etc.\n

        In case of urgency always first call 112\n

        Seqretary b.v. is the owner of the app straat.info and accepts no liability of any kind for damages etc using
        this app. Seqretary b.v. can make changes to these general terms.\n

        On privacy and your data:\n
        In order to protect your personal data, you´ll be using a chat name in the app straat.info. You decide what name
        you´re going to use. Neither your phone number nor other personal data will be shown in the public part of the
        app.\n
        When you are member of a team, your team member will see your name and nothing else. So, they don´t see your
        phone number, address etc.\n
        The coordinator of your team does have full access to your data. With that he can check if the right person is
        in his team.\n
        When requested, municipalities and police can get access to your personal data and the data that is generated
        with the app straat.info.\n

        Reports and other data created with this app will be destroyed after a period of approx. six months. Teams and
        municipalities receive copies of the report data or part of the data that is generated with this app.\n
        We do not analyse the usage of this app other than to improve our services.\n
        We do not sell your data to other organisations.\n
        You can end the usage of the app straat.info and delete your personal data by requesting such through an email
        send to us.\n
        When you accept these general terms, you accept the usage of all data as described here.
    </string>
    <string name="home_suspicious_desc">Here you\'re able to share a situation that might be
        suspicious with other members of your team. At the moment other members agree with you. that is needed looks
        suspicious call the police or other relevant organisation. Emergency? First call 112 before continuing to use
        this app!
    </string>
    <string name="home_public_space_title">Public Space</string>
    <string name="home_public_space_desc">Here you\'re able to make a report on public space (e.g.
        trash on the street, broken street light etc). This report will be send to the local government
    </string>
    <string name="home_no_available_reports">No available reports</string>
    <string name="home_fetching_near_reports">Fetching near reports</string>
    <string name="home_unidentified_location">This location is unindentified</string>
    <string name="home_suspicious_situation">Suspicious Situation</string>
    <string name="report_emergency_notif_desc">Urgent? First Call 112</string>
    <string name="report_persons_involved_desc">Fill in characteristics of the person(s) involved,
        such as height, man/woman, color hair, mustache, beard, clothing, posture, tattoo or other striking details.
    </string>
    <string name="report_send_report_success">Thank you for your report! From now on everybody can
        see in the app. If the report is about public space, it is also mailed to the host.
    </string>
    <string name="report_report_success_dialog_title">Thank you for your report!</string>
    <string name="report_emergency_notification">Emergency Notification</string>
    <string name="report_select_main_category">Select Main Category</string>
    <string name="report_select_sub_category">Select Sub Category</string>
    <string name="report_send_report">Send Report</string>
    <string name="error_invalid_postal_code">The postal code and/or house number entry seems to be
        incorrect. Please fill in the correct postal code and house number
    </string>
    <string name="error_response">Error Response</string>
    <string name="error_fill_up_all_fields">Please fill up all the empty fields</string>
    <string name="error_invalid_code">Invalid code</string>
    <string name="error_wrong_input">Wrong input</string>
    <string name="error_invalid_email">Your e-mail is not valid</string>
    <string name="error_invalid_password">"Your password is not valid or must be atleast 8 alphanumeric characters "
    </string>
    <string name="error_invalid_firstname">Your firstname is not valid</string>
    <string name="error_invalid_lastname">Your lastname is not valid</string>
    <string name="error_taken_username">This username is already in use or not allowed. Please
        choose a different name.
    </string>
    <string name="error_invalid_username">Your username is not valid</string>
    <string name="error_invalid_post_number">The postal code and/or house number entry seems to be
        incorrect. Please fill in the correct postal code and house number"
    </string>
    <string name="error_invalid_mobile_number">This number is not correct or already in use, please
        enter a different number or contact us through info@straat.info
    </string>
    <string name="error_camera_not_available">Camera not available</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="error_invalid_username_password">Invalid username or password</string>
    <string name="error_failed">Failed</string>
    <string name="error_error_occured">An error occurred please try again.</string>
    <string name="error_try_again">Try Again</string>
    <string name="error_image_not_found">Image not found</string>
    <string name="error_import_image_error">Error occured when importing image</string>
    <string name="error_mobile_prefix_error">Prefix number must be 06</string>
    <string name="error_invalid_mobile_number_length">Invalid mobile number length</string>
    <string name="error_invalid_email_address">This email address is already being used. Enter a
        different email address if or contact us via form on www.straat.info
    </string>
    <string name="error_invalid_report_desc">Please check your description content</string>
    <string name="tnc_always_call_112">Always call 112 first\n\n\n The app street.info is intended
        for supporting neighborhood prevention, among other things, for passing on reports to the municipality. The use
        of the app for other purposes, which do not fit within the current explanation of neighborhood prevention, is
        not permitted. \n\n The app is emphatically not intended to replace normal communication traffic with agencies
        such as the police, the fire brigade, ambulance and municipalities.\n\n Always call 112 first \n\n Seqretary
        e.g. owns the app straat.info and accepts no liability for damage in any way whatsoever, through the use of the
        app. Seqretary e.g. can change the terms and conditions.\n\n\n About privacy and your data:\n\n To protect your
        data better, the app street.info uses a chat name. You can decide for yourself which name you use. Your phone
        number and all your other personal details will not be disclosed to anyone in the public part of the app
        street.info.\n\n If you are a member of a team, your team members will see your name, but not your other
        details. They do not see your phone number, address etc.\n\n The team coordinator of your team does have access
        to your data. This allows the coordinator to check whether the right person is in the team.\n\n On request, the
        municipality and police can, if necessary, inspect your data and data generated with this street app.\n\n\n The
        notifications with the corresponding messages that are created with the app straat.info are kept for a limited
        time. Then they are destroyed. Teams and the municipality receive a copy of the reports.\n\n We do not analyze
        the use of the app, other than to improve our services.\n\nWe do not sell your data to other organizations.\n\n
        You can terminate the use of the app straat.info and have your data removed from our database by sending us a
        request via email.\n\nBy accepting these terms and conditions you agree to the use of your data described here.
    </string>
    <string name="enter_code_title">Enter Code</string>
    <string name="registration_ask_volunteer">Do you use Straat.info as Volunteer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="team_email_address">Team Email Address</string>
    <string name="team_name">Team Name</string>
    <string name="back">Back</string>
    <string name="registration_when_volunteer_info">When you are a volunteer, for example want to join a neighbourhood
        watch, then choose `yes`. When you are going to use this app as a professional, please choose ´no´.
    </string>
    <string name="menu_home">Home</string>
    <string name="menu_my_team">My team</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="team_create_new">Create new team</string>
    <string name="reports_tab_title_public">Public</string>
    <string name="reports_tab_title_suspicious">Suspicious</string>
    <string name="reports_tab_title_government">Government</string>
    <string name="reports_tab_title_team">Team</string>
    <string name="send_report_type_c_view_input_info">This is a checking page. When everything is good to you, you can send your message.</string>
    <string name="send_report_type_c_view_input_general_info">General Information</string>
    <string name="send_report_type_c_view_input_messages">Messages</string>
    <string name="send_report_type_c_view_input_teams_selected">Your message will be send to the following teams</string>
</resources>