<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/report_public"
            android:icon="@drawable/ic_reports_public"
            android:title="@string/reports_tab_title_public"/>

    <item
            android:id="@+id/report_suspicious"
            android:icon="@drawable/ic_reports_suspicious"
            android:title="@string/reports_tab_title_suspicious"
    />

    <item
            android:id="@+id/report_government"
            android:icon="@drawable/ic_reports_government"
            android:title="@string/reports_tab_title_government"
    />

    <item
            android:id="@+id/report_chat"
            android:icon="@drawable/ic_reports_chat"
            android:title="@string/reports_tab_title_team"
    />
</menu>