<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/base_padding"
              android:orientation="vertical"
              android:background="@color/color_registration_bg">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_ask_volunteer"
            android:textSize="@dimen/title"
    />


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/login_button_style"
            android:text="@string/yes"
            android:onClick="setAsVolunteer"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/login_button_style"
            android:text="@string/no"
            android:onClick="setAsNonVolunteer"/>

    <TextView
            android:layout_marginTop="@dimen/reg_notes_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_when_volunteer_info"
    />
</LinearLayout>