<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home" android:icon="@drawable/ic_menu_home"/>
        <!--<item
                android:id="@+id/nav_my_notification"
                android:title="@string/menu_my_notifications"
                android:icon="@drawable/ic_menu_my_notifications"/>-->

        <item
                android:id="@+id/nav_my_team"
                android:title="@string/menu_my_team"
                app:actionLayout="@layout/notification_layout2"
                android:icon="@drawable/ic_menu_my_team"/>
        <item
                android:id="@+id/nav_profile"
                android:title="@string/menu_profile" android:icon="@drawable/ic_menu_profile"/>
        <!--<item
                android:id="@+id/nav_setting"
                android:title="@string/menu_settings" android:icon="@drawable/ic_menu_settings"/>
        <item
                android:id="@+id/nav_about"
                android:title="@string/menu_about_us" android:icon="@drawable/ic_menu_about_us"/>
        <item
                android:id="@+id/nav_feedback"
                android:title="@string/menu_feedback" android:icon="@drawable/ic_menu_feedback"/>-->

        <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" android:icon="@drawable/ic_menu_logout"/>
    </group>


</menu>
