<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.RegistrationActivity"
    style="@style/parent_container_style"
    android:orientation="vertical"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registration_logo"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout">

            <ImageView
                    android:src="@drawable/ic_logo"
                    android:layout_width="143dp"
                    android:layout_height="131dp"
                    android:id="@+id/imageView2"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
            />

        </RelativeLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/registration_logo"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/registration_logo" android:id="@+id/linearLayout">

            <Button
                    android:id="@+id/registrationNavData"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_nav_data"
                    android:textColor="@color/color_blue_dark"
                    android:background="@drawable/registration_nav_step1_pressed_state"
            />
            <Button
                    android:id="@+id/registrationNavReporter"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_nav_reporter"
                    android:textColor="@color/color_blue_dark"
                    android:background="@drawable/registration_nav_step2_pressed_state"
            />
            <Button
                    android:id="@+id/registrationNavTeam"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_nav_team"
                    android:textColor="@color/color_blue_dark"
                    android:background="@drawable/registration_nav_step3_pressed_state"
            />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_registration_bg">

        <RelativeLayout
                android:id="@+id/switchableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <!--<include android:layout_height="wrap_content"-->
                 <!--android:layout_width="match_parent"-->
                 <!--layout="@layout/registration_step2"/>-->

    </ScrollView>

</LinearLayout>