<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controllers.TeamFormActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/teamFormTitleTxt" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/black" tools:text="@string/team_create_new" android:textSize="20sp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" app:layout_constraintStart_toStartOf="@+id/teamFormTitleTxt"
            app:layout_constraintTop_toBottomOf="@+id/teamFormTitleTxt"
            android:textColor="@android:color/black" android:textSize="16sp" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/teamFormTeamNameTxt"
            app:layout_constraintStart_toStartOf="@+id/textView18" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            android:background="@drawable/profile_edit_text_shape" android:textSize="16sp" android:padding="10dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/team_name"/>
    <TextView
            android:text="@string/team_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" app:layout_constraintStart_toStartOf="@+id/teamFormTeamNameTxt"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/teamFormTeamNameTxt" android:textColor="@android:color/black"
            android:textSize="16sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/teamFormTeamEmailTxt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            android:background="@drawable/profile_edit_text_shape" android:padding="10dp" android:textSize="16sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/team_email_address"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/ic_logo"
            android:id="@+id/teamFormTeamLogoImg"
            app:layout_constraintTop_toBottomOf="@+id/teamFormTeamEmailTxt"
            app:layout_constraintStart_toStartOf="@+id/teamFormTeamEmailTxt"
            app:layout_constraintEnd_toEndOf="@+id/teamFormTeamEmailTxt"
            app:layout_constraintBottom_toTopOf="@+id/teamFormButtonTxt" android:onClick="showPictureDialog"/>
    <Button
            android:text="Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/teamFormButtonTxt" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" style="@style/registration_button_style"
    />

    <ProgressBar
            android:id="@+id/team_form_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/color_blue_dark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
</android.support.constraint.ConstraintLayout>